# Car-Ox

./: .gitignore  CLAUDE.md  build_macos.sh
.claude/: settings.json
.claude/skills/: ffmpeg-mastery.md  macos-app-packaging.md  python-crossplatform-desktop.md  test-and-ci-driven.md
.devlogs/: 2026-06-01.md  template.md
.github/workflows/: build-macos.yml  build-windows.yml
docs/: design-specs.md  execution-steps.md  requirements.md  tech-specs.md
live2gif/: README.md  main.py  main_gui.py  pyproject.toml
live2gif/assets/: README.md
live2gif/src/: __init__.py  cli.py  converter.py  gui.py  input_resolver.py  quality_presets.py
live2gif/tests/: conftest.py  test_cli.py  test_converter.py  test_gui.py  test_input_resolver.py  test_quality_presets.py
