[project]
name = "live2gif"
version = "1.0.0"
description = "将 Apple Live Photo 转换为高质量 GIF 动图"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Car-Ox", email = "18355004062@163.com" },
]
keywords = ["live-photo", "gif", "ffmpeg", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]

[project.scripts]
live2gif = "main:main"
live2gif-gui = "main_gui:main"

# ── Ruff 代码风格检查 ────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501", # 行长度由 formatter 处理
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── mypy 类型检查 ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = ["tkinter.*"]
ignore_missing_imports = true

# ── pytest 配置 ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests/"]
markers = [
    "ffmpeg: 需要系统安装 FFmpeg 的集成测试",
    "gui: Tkinter GUI 测试（需要显示器）",
]
addopts = "-v --tb=short"
